Fix contrast for message text

--- a/src/styles/h5p-cornell-main.scss
+++ b/src/styles/h5p-cornell-main.scss
@@ -17,4 +17,4 @@ $size-wrapper-min-width: 960px;
 
 $color-hint-message-background: #f5e8d5;
 $color-hint-message-border: #eedd55;
-$color-hint-message-text: #9e5c16;
+$color-hint-message-text: #874e12;
